(fix) Hide overflow on gridblock and take out happySun styling

--- a/public/styles/style.scss
+++ b/public/styles/style.scss
@@ -112,10 +112,6 @@ label {
     margin-top: -5px
 }
 
-
-#positionDivs{
-  display:inline-block;
-  position: relative;
-  left:87%;
-  height: 100%
+.mainContainer {
+  overflow: hidden;
 }
